[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"

[[bin]]
name = "part_one"
path = "src/part_one.rs"

[[bin]]
name = "part_two"
path = "src/part_two.rs"
